--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<div class="search_input" id="search_input_box">
 			<div class="container">
 				<form class="d-flex justify-content-between">
-					<input type="text" class="form-control" id="search_input" placeholder="Search Here">
+					<input type="text" class="form-control" id="search_input" placeholder="Loadidig the best boots and shoes ...">
 					<button type="submit" class="btn"></button>
 					<span class="lnr lnr-cross" id="close_search" title="Close Search"></span>
 				</form>
@@ -183,7 +183,6 @@
 					<div class="col-md-9 mt-sm-20">
 						<p class="s_product_text">
 
-							<br>
 							<br>Tutto è iniziato nel 1954, quando all’età di 12 anni, mio nonno ha iniziato a lavorare nel settore delle calzature. La passione, pian piano è cresciuta e ha deciso di aprire la sua attività.
 						   <br>All’inizio, lavorando solo a conto terzi, per poi crearsi qualche modello con il suo marchio che all’ora era Victoria.
 						</p>
