tempo libero e accessori

--- a/elements.html
+++ b/elements.html
@@ -241,15 +241,12 @@
 						<img src="img/elements/d.jpg" alt="" class="img-fluid">
 					</div>
 					<div class="col-md-9 mt-sm-20">
-						<p>Recently, the US Federal government banned online casinos from operating in America by making it illegal to
-							transfer money to them through any US bank or payment system. As a result of this law, most of the popular
-							online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino
-							players found themselves being chased by the Federal government. But, after a fortnight, the online casino
-							industry came up with a solution and new online casinos started taking root. These began to operate under a
-							different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major
-							part of this was enlisting electronic banking systems that would accept this new clarification and start doing
-							business with me. Listed in this article are the electronic banking systems that accept players from the United
-							States that wish to play in online casinos.</p>
+						<p class="s_product_text">
+							<br>Tutto è iniziato nel 1954, quando il nostro amato nonno, all'età di 12 anni, ha mosso i primi passi nel mondo delle calzature. La sua passione per questo mestiere era ardente fin da subito, tanto da spingerlo ad aprire la sua attività qualche anno dopo.
+						    <br>Inizialmente, la produzione si concentrava principalmente sul lavoro conto terzi, ma nel tempo il nonno decise di creare anche alcuni modelli con il suo marchio, che all'epoca era "Victoria".
+						    <br>Nostro padre, nato e cresciuto tra pellami e macchinari, ha seguito le orme del nonno iniziando a lavorare in azienda all'età di 14 anni. Con il passare degli anni, ha preso in mano le redini dell'attività, portando avanti la tradizione di famiglia con dedizione e passione.
+						    <br>Anche lui ha lavorato prevalentemente su commissione per clienti esterni, ma ha comunque sviluppato alcuni modelli personali, ispirandosi alla sua grande passione per il trial.
+						</p>
 					</div>
 				</div>
 			</div>
