--- a/enduro.html
+++ b/enduro.html
@@ -135,7 +135,7 @@
 
 	
 	<div class="s_product_text">
-				<h2 style="text-align: center; font-size: 2.5em;">I nostri scarponi da ENDURO</h2>
+				<h2 style="text-align: center; font-size: 2.5em;">I nostri stivali da ENDURO</h2>
 				</div>
 	<!--================ Single Product Area (1) =================-->
 	<div class="product_image_area">
@@ -171,7 +171,7 @@
 							<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 							<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 						</ul>-->
-						<p>L’unico modello al mondo da enduro, completamente in pelle, come si facevano una volta. Cosi da permettervi di avere una sensibilità maggiore dei piedi e del freno posteriore. Inoltre, sarà molto più duraturo di qualsiasi paio di plastica moderno. Infine, ha la cucitura sul fondo cosi da permettervi di cambiare le suole in modo economico e veloce.</p>
+						<p>L’unico modello al mondo da enduro, completamente in pelle, come si facevano una volta. Cosi da permettervi di avere una sensibilità maggiore nei piedi e di conseguenza nel uso del freno posteriore. Inoltre, sarà molto più duraturo di qualsiasi paio di plastica moderno. Infine, ha la cucitura sul fondo cosi da permettervi di cambiare le suole in modo economico e veloce.</p>
 						<!--
 						<div class="product_count">
 							<label for="qty">Quantity:</label>
@@ -216,7 +216,8 @@
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
 					<p>
-						•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
+						<br>•	<strong>Possibilità di scrivere il tuo nome o una parola ricamata nello stivale</strong>
+						<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 						<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.						
 						<br>•	Tomaia realizzata solamente in pelle pieno fiore di diversi spessori, per una lunga durata e una maggiore resistenza all'abrasione e infine per un maggiore comfort.
 						<br>•	Ampie zone a fisarmonica anteriori e posteriori per migliore flessibilità, controllo e sostegno.
