--- a/montgna&lavoro.html
+++ b/montgna&lavoro.html
@@ -1032,7 +1032,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>Lo scarpone ideale sia per lavorare in pianura, sia per camminare in sentieri complicati e sconnessi in montagna, ed è consigliabile usarlo nelle giornate in cui non piove. Vi sosterrà la caviglia, grazie alla sua altezza e vi offrirà una calzata comoda grazie al fondo cucito che da una base d’appoggio più larga e comfortevole grazie alla fodera interna in pura pelle di vitello</p>
+					<p>Lo scarpone ideale sia per lavorare in pianura, sia per camminare in sentieri complicati e sconnessi in montagna, ed è consigliabile usarlo nelle giornate in cui non piove. Vi sosterrà la caviglia, grazie alla sua altezza e vi offrirà una calzata comoda dovuta al fondo cucito che da una base d’appoggio più larga e comfortevole grazie anche alla fodera interna in pura pelle di vitello</p>
 					<!--
 					<div class="product_count">
 						<label for="qty">Quantity:</label>
@@ -2832,7 +2832,7 @@
                         </div>                       
                         <div class="col-3">
                             <img class="img-fluid" src="img-mos/montagna/puntale.jpeg" alt="">
-                            <p>Puntale di ferrro già incluso</p>
+                            <p>Puntale di ferrro</p>
                         </div> 
 					</div>
 			</div>
@@ -3309,7 +3309,7 @@
                         </div>                       
                         <div class="col-3">
                             <img class="img-fluid" src="img-mos/montagna/puntale.jpeg" alt="">
-                            <p>Puntale di ferrro già incluso</p>
+                            <p>Puntale di ferrro</p>
                         </div> 
 					</div>
 			</div>
@@ -3773,7 +3773,7 @@
                         </div>                       
                         <div class="col-3">
                             <img class="img-fluid" src="img-mos/montagna/puntale.jpeg" alt="">
-                            <p>Puntale di ferrro già incluso</p>
+                            <p>Puntale di ferrro</p>
                         </div> 
 					</div>
 			</div>
