--- a/trial.html
+++ b/trial.html
@@ -135,7 +135,7 @@
 
 	
 	<div class="s_product_text">
-				<h2 style="text-align: center; font-size: 2.5em;">I nostri scarponi da TRIAL</h2>
+				<h2 style="text-align: center; font-size: 2.5em;">I nostri stivali da TRIAL</h2>
 				</div>
 	<!--================ Single Product Area (1) =================-->
 	<div class="product_image_area">
@@ -153,6 +153,9 @@
 						<div class="single-prd-item">
 							<img class="img-fluid" src="img-mos/2c.png" alt="">
 						</div>
+						<div class="single-prd-item">
+							<img class="img-fluid" src="img-mos/plustek.png" alt="">
+						</div>
 						<!--
 						<div class="single-prd-item">
 							<img class="img-fluid" src="img-mos/2d.png" alt="">
@@ -168,7 +171,7 @@
 							<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 							<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 						</ul>-->
-						<p>Questo è il nostro modello di punta, per quando riguarda il trial, ed è lo stesso che usa e testa il pluricampione italiano MATTEO GRATTAROLA e GILVILA. E’ il modello composto solamente con la pelle più pregiata per garantire la massima durata nel tempo e il massimo comfort. Questo modello è più tecnico e viene usato soprattutto per chi fa gare o per chi li usa molto durante l’anno.</p>
+						<p>Questo è il nostro modello di punta, per quando riguarda il trial, ed è lo stesso che usa e testa il pluricampione italiano MATTEO GRATTAROLA e GILVILA. E’ il modello composto solamente con la pelle più pregiata per garantire la massima durata nel tempo e il massimo comfort. Questo modello è il più tecnico e viene usato soprattutto per chi fa gare o per chi li usa molto durante l’anno.</p>
 						<!--
 						<div class="product_count">
 							<label for="qty">Quantity:</label>
@@ -213,7 +216,8 @@
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
 					<p>
-						•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
+						•	<strong>Possibilità di scrivere il tuo nome o una parola ricamata nello stivale</strong>
+						<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 						<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.						
 						<br>•	Tomaia realizzata solamente in pelle pieno fiore di diversi spessori, per una lunga durata e una maggiore resistenza all'abrasione e infine per un maggiore comfort.
 						<br>•	Ampie zone a fisarmonica anteriori e posteriori per migliore flessibilità, controllo e sostegno.
@@ -229,7 +233,6 @@
 						<br>•	Esclusiva suola in gomma composita con design aderente e ruvido. 
 						<br>•	Suola esterna sostituibile. 
 						<br>•	Il plantare anatomico sostituibile, progettato per comfort e sostegno, garantisce una distribuzione uniforme del peso.
-						<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 						<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.
 						<br>
 						<br>PESO:
@@ -681,6 +684,9 @@
 					<div class="single-prd-item">
 						<img class="img-fluid" src="img-mos/1c.png" alt="">
 					</div>
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/pluseco.png" alt="">
+					</div>
 				</div>
 			</div>
 			<div class="col-lg-5 offset-lg-1">
@@ -692,7 +698,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>Questo è il nostro modello più economico, per quando riguarda il trial. Il modello è stato pensato per i principianti, per i bambini, per chi fa solamente motoalpinismo o per seguidores/minder.</p>
+					<p>Questo è il nostro modello economico, per quando riguarda il trial. Il modello è stato pensato per i principianti, per i bambini, per chi fa solamente motoalpinismo o per seguidores/minder.</p>
 					<!--
 					<div class="product_count">
 						<label for="qty">Quantity:</label>
@@ -737,7 +743,8 @@
 		<div class="tab-content" id="myTabContent">
 			<div class="tab-pane fade" id="home1" role="tabpanel" aria-labelledby="home-tab">
 				<p>
-					•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
+					•	<strong>Possibilità di scrivere il tuo nome o una parola ricamata nello stivale</strong>
+					<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 					<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.						
 					<br>•	Tomaia realizzata solamente in pelle pieno fiore di diversi spessori, per una lunga durata e una maggiore resistenza all'abrasione e infine per un maggiore comfort.
 					<br>•	Ampie zone a fisarmonica anteriori e posteriori per migliore flessibilità, controllo e sostegno.
@@ -753,7 +760,6 @@
 					<br>•	Esclusiva suola in gomma composita con design aderente e ruvido. 
 					<br>•	Suola esterna sostituibile. 
 					<br>•	Il plantare anatomico sostituibile, progettato per comfort e sostegno, garantisce una distribuzione uniforme del peso.
-					<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 					<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.
 					<br>
 					<br>PESO:
@@ -1269,7 +1275,8 @@
 		<div class="tab-content" id="myTabContent">
 			<div class="tab-pane fade" id="home2" role="tabpanel" aria-labelledby="home-tab">
 				<p> <br>
-					•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
+					•	<strong>Possibilità di scrivere il tuo nome o una parola ricamata nello stivale</strong>
+					<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 					<br>	•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.
 					<br>•	Tomaia realizzata solamente in pelle pieno fiore di diversi spessori, per una lunga durata e una maggiore resistenza all'abrasione e infine per un maggiore comfort.
 					<br>•	Ampie zone a fisarmonica anteriori per migliore flessibilità, controllo e sostegno.
@@ -1285,7 +1292,6 @@
 					<br>•	Esclusiva suola in gomma composita con design aderente e ruvido. 
 					<br>•	Suola esterna sostituibile. 
 					<br>•	Il plantare anatomico sostituibile, progettato per comfort e sostegno, garantisce una distribuzione uniforme del peso.
-					<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 					<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.
 					<br>
 					<br>PESO:
