--- a/turismo.html
+++ b/turismo.html
@@ -137,7 +137,7 @@
 
 	
 	<div class="s_product_text">
-				<h2 style="text-align: center; font-size: 2.5em;">I nostri scarponi da TURISMO</h2>
+				<h2 style="text-align: center; font-size: 2.5em;">I nostri stivali da TURISMO</h2>
 				</div>
 	<!--================ Single Product Area (1) =================-->
 	<div class="product_image_area">
@@ -215,7 +215,8 @@
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
 					<p>
-						•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
+						•	<strong>Possibilità di scrivere il tuo nome o una parola ricamata nello stivale</strong>
+						<br>•	tutti i passaggi, a partire dal taglio, orlatura, montaggio e finissaggio sono completamente svolti a mano qua in veneto nel nostro laboratorio.
 						<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.						
 						<br>•	Tomaia realizzata solamente in pelle pieno fiore di diversi spessori, per una lunga durata e una maggiore resistenza all'abrasione e infine per un maggiore comfort.
 						<br>•	Ampie zone a fisarmonica anteriori e posteriori per migliore flessibilità, controllo e sostegno.
