--- a/vintage.html
+++ b/vintage.html
@@ -137,7 +137,7 @@
 
 	
 	<div class="s_product_text">
-				<h2 style="text-align: center; font-size: 2.5em;">I nostri scarponi VINTAGE</h2>
+				<h2 style="text-align: center; font-size: 2.5em;">I nostri stivali VINTAGE</h2>
 				</div>
 	<!--================ Single Product Area (1) =================-->
 	<div class="product_image_area">
@@ -224,7 +224,8 @@
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
 					<p>
-						•	Tomaia realizzata solamente in pelle pieno fiore di diversi spessori, per una lunga durata e una maggiore resistenza all'abrasione e infine per un maggiore comfort.
+						•	<strong>Possibilità di scrivere il tuo nome o una parola ricamata nello stivale</strong>
+					<br>•	Tomaia realizzata solamente in pelle pieno fiore di diversi spessori, per una lunga durata e una maggiore resistenza all'abrasione e infine per un maggiore comfort.
                     <br>•	Possibilità di avere la fodera interna dello stivale, completamente in pelle, per avere un comfort ai massimi livelli, oppure restare con la fodera in tessuto per contenere i costi
                     <br>•	Suola vibram con il tacco per cross e cafè racer-stradali, suola da trial per il trial vintage
                     <br>•	Ampie zone a fisarmonica anteriori per migliore flessibilità, controllo e sostegno.
