--- a/tempolibero.html
+++ b/tempolibero.html
@@ -1466,12 +1466,12 @@
 				
 				</p>
                 <p>Optional :</p>
-                    <div class="row">
-						<div class="col-4">
-							<img class="img-fluid" src="img-mos/montagna/montone.jpeg" alt="">
-                            <p>Pelo di montone</p>
-						</div>                  
+				<div class="row gallery-item">
+					<div class="col-md-3">
+						<img class="img-fluid" src="img-mos/montagna/montone.jpeg" alt="">
+						<p>Questo è il pelo di montone (un pellame davvero pregiato), che nella stagione invernale vi terra caldo anche a temperature sotto lo zero. Inoltre, renderà la calzata ancora più comoda e soffice.</p>
 					</div>
+				</div>
 			</div>
 			<div class="tab-pane fade" id="profile3" role="tabpanel" aria-labelledby="profile-tab">
 				<div class="table-responsive">
@@ -1889,12 +1889,12 @@
 				
 				</p>
                 <p>Optional :</p>
-                <div class="row">
-                    <div class="col-4">
-                        <img class="img-fluid" src="img-mos/montagna/montone.jpeg" alt="">
-                        <p>Pelo di montone</p>
-                    </div>                  
-                </div>
+                <div class="row gallery-item">
+					<div class="col-md-3">
+						<img class="img-fluid" src="img-mos/montagna/montone.jpeg" alt="">
+						<p>Questo è il pelo di montone (un pellame davvero pregiato), che nella stagione invernale vi terra caldo anche a temperature sotto lo zero. Inoltre, renderà la calzata ancora più comoda e soffice.</p>
+					</div>
+				</div>
 			</div>
 			<div class="tab-pane fade" id="profile4" role="tabpanel" aria-labelledby="profile-tab">
 				<div class="table-responsive">
