--- a/tracking.html
+++ b/tracking.html
@@ -5,8 +5,8 @@
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/fav.png">
-    <!-- Author Meta -->
+	<link rel="shortcut icon" href="img/fav-mos.png">
+        <!-- Author Meta -->
     <meta name="author" content="CodePixar">
     <!-- Meta Description -->
     <meta name="description" content="">
@@ -15,7 +15,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Karma Shop</title>
+	<title>Calzaturificio MOS</title>
 
     <!--
             CSS
