--- a/elements.html
+++ b/elements.html
@@ -5,8 +5,8 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
-	<!-- Author Meta -->
+	<link rel="shortcut icon" href="img/fav-mos.png">
+		<!-- Author Meta -->
 	<meta name="author" content="CodePixar">
 	<!-- Meta Description -->
 	<meta name="description" content="">
@@ -15,7 +15,8 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Karma Shop</title>
+	<title>Calzaturificio MOS</title>
+
 
 	<!--
             CSS
@@ -37,7 +38,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light main_box">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo2.png" width="150" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -48,41 +49,25 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item"><a class="nav-link" href="index.html#chisiamo">CHI SIAMO</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Shop</a>
+								 aria-expanded="false">MODELLI</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>
-									<li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>
-									<li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>
-									<li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>
+									<li class="nav-item"><a class="nav-link">Moto</a></li>
+									<li class="nav-item"><a class="nav-link" href="trial.html" style="color: black; font-size: 0.8em">    TRIAL</a></li>
+									<li class="nav-item"><a class="nav-link" href="enduro.html" style="color: black; font-size: 0.8em">    ENDURO</a></li>
+									<li class="nav-item"><a class="nav-link" href="turismo.html" style="color: black; font-size: 0.8em">   TURISMO</a></li>
+									<li class="nav-item"><a class="nav-link" href="vintage.html" style="color: black; font-size: 0.8em">    VINTAGE</a></li>
+									<li class="nav-item"><a class="nav-link" href="montgna&lavoro.html">Montagna & Lavoro</a></li>
+									<li class="nav-item"><a class="nav-link" href="tempolibero.html">Tempo libero</a></li>
+									<li class="nav-item"><a class="nav-link" href="piloti.html">Piloti</a></li>
 								</ul>
 							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown active">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-									<li class="nav-item"><a class="nav-link" href="tracking.html">Tracking</a></li>
-									<li class="nav-item active"><a class="nav-link" href="elements.html">Elements</a></li>
-								</ul>
-							</li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-						</ul>
-						<ul class="nav navbar-nav navbar-right">
-							<li class="nav-item"><a href="#" class="cart"><span class="ti-bag"></span></a></li>
-							<li class="nav-item">
-								<button class="search"><span class="lnr lnr-magnifier" id="search"></span></button>
-							</li>
+												
+							<li class="nav-item"><a class="nav-link" href="curascarpa.html">CURA DELLA SCARPA</a></li>
+							<li class="nav-item"><a class="nav-link" href="accessori.html">ACCESSORI</a></li>
+							<li class="nav-item"><a class="nav-link" href="contact.html">CONTATTI</a></li>
 						</ul>
 					</div>
 				</div>
@@ -91,7 +76,7 @@
 		<div class="search_input" id="search_input_box">
 			<div class="container">
 				<form class="d-flex justify-content-between">
-					<input type="text" class="form-control" id="search_input" placeholder="Search Here">
+					<input type="text" class="form-control" id="search_input" placeholder="Loadidig the best boots and shoes ...">
 					<button type="submit" class="btn"></button>
 					<span class="lnr lnr-cross" id="close_search" title="Close Search"></span>
 				</form>
@@ -433,6 +418,10 @@
 							<div class="single-gallery-image" style="background: url(img/elements/g3.jpg);"></div>
 						</a>
 					</div>
+
+
+
+
 					<div class="col-md-6">
 						<a href="img/elements/g4.jpg" class="img-pop-up">
 							<div class="single-gallery-image" style="background: url(img/elements/g4.jpg);"></div>
@@ -443,6 +432,8 @@
 							<div class="single-gallery-image" style="background: url(img/elements/g5.jpg);"></div>
 						</a>
 					</div>
+
+					
 					<div class="col-md-4">
 						<a href="img/elements/g6.jpg" class="img-pop-up">
 							<div class="single-gallery-image" style="background: url(img/elements/g6.jpg);"></div>
