--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
 								</div>
 							</div>
 							<div class="info_item">
-								<p style="text-align: center;"><br><a class="primary-btn" href="#"><i class="lnr lnr-phone-handset"></i>  CHIAMA ORA</a></p>
+								<p style="text-align: center;"><br><a class="primary-btn" href="https://wa.me/393423574960"><img src="img-mos/—Pngtree—white whatsapp icon png_3562063.png" width="25"> scrivici su whatsappp</a></p>
 							</div>
 						</div>
 
