--- a/vintage.html
+++ b/vintage.html
@@ -32,6 +32,11 @@
 </head>
 
 <body>
+	<button class="pulsante-fisso">
+		<div class="info_item">
+			<br><a class="primary-btn" href="https://wa.me/393423574960"><img src="img-mos/—Pngtree—white whatsapp icon png_3562063.png" width="40"></a>
+		</div>
+	</button>
 
 	<!-- Start Header Area -->
 	<header class="header_area sticky-header">
